Toggle bar color changed and fixed some alignment issue

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ body {
     transform: translateY(-7%);
 }
 
+.at-digital-container .btn.btn-warning {
+    background: #F28D35 !important;
+    border: 1px solid #F28D35;
+}
+
 .at-digital-container .top-menu-navbar {
     background: #6B3CC9 !important;
 }
